# pylonsdk

./: .gitlab-ci.yml  .liam.yml  AUTHORS  README.md
conda-recipe/: bld.bat  build.sh  conda_build_config_linux-aarch64.yaml  conda_build_config_linux-x86-64.yaml  conda_build_config_win-x86-64.yaml  meta.yaml  run_test.bat  run_test.sh
conda-recipe/prefix/lib/cmake/pylonsdk/: pylonsdkConfig.cmake  pylonsdkConfigVersion.cmake  pylonsdkTargets-release.cmake  pylonsdkTargets.cmake
conda-recipe/pylon_test/: CMakeLists.txt  main.cpp
